assets/manifests/group_ingress_manager.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-system
