assets/manifests/genesis_runner_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ${RUNNER_POD}
  labels:
    app.kubernetes.io/name: ecli-genesis-runner
spec:
  restartPolicy: Never
  nodeSelector:
    kubernetes.io/arch: "amd64"
  containers:
    - name: artifacts
      image: ${GENESIS_RUNNER_IDLE_IMAGE}
      imagePullPolicy: IfNotPresent
      command: ["/bin/sh", "-c", "sleep 86400"]
      volumeMounts:
        - name: work
          mountPath: /work
  volumes:
    - name: bootstrap-scripts
      configMap:
        name: ${RUNNER_CM}
        defaultMode: 0555
    - name: work
      emptyDir: {}
